ffi/poc/cpp/corpus/include/ak_abi.h

typedef struct ak_dec_ctx ak_dec_ctx;
/* ABI v1 section 4: source code units -> UTF-8 into dst; returns bytes written or an error. */
typedef int32_t (*ak_transcode_fn)(const void *src, size_t len, uint8_t *dst, int32_t cap, ak_grow_fn grow, void *sink);
/* ABI v1 section 4, encode: a blob as DATA in the group. `len` counts SOURCE code units; `tc == NULL` means the field is ABSENT. */
struct ak_str {
  const void *data;
  size_t len;
  ak_transcode_fn tc;
};
typedef struct ak_str ak_str;
/* ABI v1 section 4, decode: an OFFSET into the buffer the host handed in. */
struct ak_span {
  uint32_t off;
  uint32_t len;
  uint32_t coder;
};
typedef struct ak_span ak_span;
/* Decision 11's unknown-field bag: two words, raw tag-and-value runs. */
struct ak_blob {
  const void *data;
  size_t len;
};
typedef struct ak_blob ak_blob;
/* Decision 11 (WP5 step 7): one message occurrence's unknown-field buffer, host memory the core copies the runs into. */
struct ak_unk_buf {
  void *data;
  uint32_t len;
  uint32_t cap;
};
typedef struct ak_unk_buf ak_unk_buf;
/* Encode group for `Timestamp`. */
struct ak_efix_Timestamp {
  int64_t seconds;
  int32_t nanos;
  uint32_t presence;
};
/* Decode group for `Timestamp`. */
struct ak_dfix_Timestamp {
  int64_t seconds;
  int32_t nanos;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Encode group for `Timestamp`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_Timestamp {
  int64_t seconds;
  int32_t nanos;
  struct ak_blob unknown;
  uint32_t presence;
};
/* Encode group for `ChunkInner`. */
struct ak_efix_ChunkInner {
  uint32_t presence;
};
/* Decode group for `ChunkInner`. */
struct ak_dfix_ChunkInner {
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Encode group for `ChunkInner`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_ChunkInner {
  struct ak_blob unknown;
  uint32_t presence;
};
/* Encode group for `ChunkElement`. */
struct ak_efix_ChunkElement {
  struct ak_str id;
  struct ak_efix_ChunkInner inner;
  uint32_t presence;
};
#define AK_EFIX_CHUNKELEMENT_PRESENT_INNER (1u << 0)
/* Decode group for `ChunkElement`. */
struct ak_dfix_ChunkElement {
  struct ak_span id;
  struct ak_dfix_ChunkInner inner;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
#define AK_DFIX_CHUNKELEMENT_PRESENT_INNER (1u << 0)
/* Encode group for `ChunkElement`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_ChunkElement {
  struct ak_str id;
  struct ak_ufix_ChunkInner inner;
  struct ak_blob unknown;
  uint32_t presence;
};
#define AK_UFIX_CHUNKELEMENT_PRESENT_INNER (1u << 0)
/* Encode group for `ChunkedResponse`. */
struct ak_efix_ChunkedResponse {
  int32_t page;
  uint32_t presence;
};
/* Decode group for `ChunkedResponse`. */
struct ak_dfix_ChunkedResponse {
  int32_t page;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Encode group for `ChunkedResponse`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_ChunkedResponse {
  int32_t page;
  struct ak_blob unknown;
  uint32_t presence;
};
/* Encode group for `ChunkedResponseWide`. */
struct ak_efix_ChunkedResponseWide {
  uint32_t presence;
};
/* Decode group for `ChunkedResponseWide`. */
struct ak_dfix_ChunkedResponseWide {
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Encode group for `ChunkedResponseWide`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_ChunkedResponseWide {
  struct ak_blob unknown;
  uint32_t presence;
};
/* Encode group for `LeafElement`. */
struct ak_efix_LeafElement {
  struct ak_str id;
  int64_t n;
  struct ak_efix_Timestamp stamp;
  uint32_t presence;
};
#define AK_EFIX_LEAFELEMENT_PRESENT_STAMP (1u << 0)
/* Decode group for `LeafElement`. */
struct ak_dfix_LeafElement {
  struct ak_span id;
  int64_t n;
  struct ak_dfix_Timestamp stamp;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
#define AK_DFIX_LEAFELEMENT_PRESENT_STAMP (1u << 0)
/* Encode group for `LeafElement`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_LeafElement {
  struct ak_str id;
  int64_t n;
  struct ak_ufix_Timestamp stamp;
  struct ak_blob unknown;
  uint32_t presence;
};
#define AK_UFIX_LEAFELEMENT_PRESENT_STAMP (1u << 0)
/* Encode group for `LeafResponse`. */
struct ak_efix_LeafResponse {
  uint32_t presence;
};
/* Decode group for `LeafResponse`. */
struct ak_dfix_LeafResponse {
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Encode group for `LeafResponse`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_LeafResponse {
  struct ak_blob unknown;
  uint32_t presence;
};
/* Encode group for `SurrogateInner`. */
struct ak_efix_SurrogateInner {
  struct ak_str text;
  uint32_t presence;
};
/* Decode group for `SurrogateInner`. */
struct ak_dfix_SurrogateInner {
  struct ak_span text;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Encode group for `SurrogateInner`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_SurrogateInner {
  struct ak_str text;
  struct ak_blob unknown;
  uint32_t presence;
};
/* Encode group for `Surrogate`. */
struct ak_efix_Surrogate {
  struct ak_str text;
  struct ak_efix_SurrogateInner nested;
  struct ak_str raw;
  uint32_t presence;
};
#define AK_EFIX_SURROGATE_PRESENT_NESTED (1u << 0)
/* Decode group for `Surrogate`. */
struct ak_dfix_Surrogate {
  struct ak_span text;
  struct ak_dfix_SurrogateInner nested;
  struct ak_span raw;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
#define AK_DFIX_SURROGATE_PRESENT_NESTED (1u << 0)
/* Encode group for `Surrogate`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_Surrogate {
  struct ak_str text;
  struct ak_ufix_SurrogateInner nested;
  struct ak_str raw;
  struct ak_blob unknown;
  uint32_t presence;
};
#define AK_UFIX_SURROGATE_PRESENT_NESTED (1u << 0)
/* Encode group for `WireZoo`. */
struct ak_efix_WireZoo {
  int32_t v_int32;
  int64_t v_int64;
  uint8_t v_bool;
  double v_double;
  uint32_t v_fixed32;
  struct ak_str v_string;
  struct ak_str v_bytes;
  int32_t v_enum;
  struct ak_efix_Timestamp v_msg;
  int32_t v_big_tag;
  uint32_t presence;
};
#define AK_EFIX_WIREZOO_PRESENT_V_MSG (1u << 0)
/* Decode group for `WireZoo`. */
struct ak_dfix_WireZoo {
  int32_t v_int32;
  int64_t v_int64;
  uint8_t v_bool;
  double v_double;
  uint32_t v_fixed32;
  struct ak_span v_string;
  struct ak_span v_bytes;
  int32_t v_enum;
  struct ak_dfix_Timestamp v_msg;
  int32_t v_big_tag;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
#define AK_DFIX_WIREZOO_PRESENT_V_MSG (1u << 0)
/* Encode group for `WireZoo`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_WireZoo {
  int32_t v_int32;
  int64_t v_int64;
  uint8_t v_bool;
  double v_double;
  uint32_t v_fixed32;
  struct ak_str v_string;
  struct ak_str v_bytes;
  int32_t v_enum;
  struct ak_ufix_Timestamp v_msg;
  int32_t v_big_tag;
  struct ak_blob unknown;
  uint32_t presence;
};
#define AK_UFIX_WIREZOO_PRESENT_V_MSG (1u << 0)
/* Encode vtable for `Timestamp`. */
struct ak_evt_Timestamp {
  const void *_reserved;  /* an empty struct has no defined size in C */
};
/* Decode vtable for `Timestamp` (the push family, ABI v1 section 7.1). */
struct ak_dvt_Timestamp {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_Timestamp *);
};