ffi/poc/codec/crates/ak-abi/src/generated_corpus/abi.rs

impl ak_efix_ChunkElement {
    pub const ZERO: Self = ak_efix_ChunkElement {
        id: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        inner: ak_efix_ChunkInner::ZERO,
        presence: 0,
    };
}
pub const AK_EFIX_CHUNKELEMENT_PRESENT_INNER: u32 = 1 << 0;

/// Decode group for `ChunkElement`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_ChunkElement {
    pub id: ak_span,
    pub inner: ak_dfix_ChunkInner,
    pub presence: u32,
}
impl ak_dfix_ChunkElement {
    pub const ZERO: Self = ak_dfix_ChunkElement {
        id: ak_span { off: 0, len: 0, coder: 0 },
        inner: ak_dfix_ChunkInner::ZERO,
        presence: 0,
    };
}
pub const AK_DFIX_CHUNKELEMENT_PRESENT_INNER: u32 = 1 << 0;

/// Encode group for `ChunkElement`.  With the unknown-field bag (decision 11 candidate).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_ufix_ChunkElement {
    pub id: ak_str,
    pub inner: ak_ufix_ChunkInner,
    pub unknown: ak_blob,
    pub presence: u32,
}
impl ak_ufix_ChunkElement {
    pub const ZERO: Self = ak_ufix_ChunkElement {
        id: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        inner: ak_ufix_ChunkInner::ZERO,
        unknown: ak_blob { data: ::core::ptr::null(), len: 0 },
        presence: 0,
    };
}
pub const AK_UFIX_CHUNKELEMENT_PRESENT_INNER: u32 = 1 << 0;

/// Encode group for `ChunkedResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_ChunkedResponse {
    pub page: i32,
    pub presence: u32,
}
impl ak_efix_ChunkedResponse {
    pub const ZERO: Self = ak_efix_ChunkedResponse {
        page: 0,
        presence: 0,
    };
}

/// Decode group for `ChunkedResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_ChunkedResponse {
    pub page: i32,
    pub presence: u32,
}
impl ak_dfix_ChunkedResponse {
    pub const ZERO: Self = ak_dfix_ChunkedResponse {
        page: 0,
        presence: 0,
    };
}

/// Encode group for `ChunkedResponse`.  With the unknown-field bag (decision 11 candidate).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_ufix_ChunkedResponse {
    pub page: i32,
    pub unknown: ak_blob,
    pub presence: u32,
}
impl ak_ufix_ChunkedResponse {
    pub const ZERO: Self = ak_ufix_ChunkedResponse {
        page: 0,
        unknown: ak_blob { data: ::core::ptr::null(), len: 0 },
        presence: 0,
    };
}

/// Encode group for `ChunkedResponseWide`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_ChunkedResponseWide {
    pub presence: u32,
}
impl ak_efix_ChunkedResponseWide {
    pub const ZERO: Self = ak_efix_ChunkedResponseWide {
        presence: 0,
    };
}

/// Decode group for `ChunkedResponseWide`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_ChunkedResponseWide {
    pub presence: u32,
}
impl ak_dfix_ChunkedResponseWide {
    pub const ZERO: Self = ak_dfix_ChunkedResponseWide {
        presence: 0,
    };
}

/// Encode group for `ChunkedResponseWide`.  With the unknown-field bag (decision 11 candidate).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_ufix_ChunkedResponseWide {
    pub unknown: ak_blob,
    pub presence: u32,
}
impl ak_ufix_ChunkedResponseWide {
    pub const ZERO: Self = ak_ufix_ChunkedResponseWide {
        unknown: ak_blob { data: ::core::ptr::null(), len: 0 },
        presence: 0,
    };
}

/// Encode group for `LeafElement`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_LeafElement {
    pub id: ak_str,
    pub n: i64,
    pub stamp: ak_efix_Timestamp,
    pub presence: u32,
}
impl ak_efix_LeafElement {
    pub const ZERO: Self = ak_efix_LeafElement {
        id: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        n: 0,
        stamp: ak_efix_Timestamp::ZERO,
        presence: 0,
    };
}
pub const AK_EFIX_LEAFELEMENT_PRESENT_STAMP: u32 = 1 << 0;

/// Decode group for `LeafElement`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_LeafElement {
    pub id: ak_span,
    pub n: i64,
    pub stamp: ak_dfix_Timestamp,
    pub presence: u32,
}
impl ak_dfix_LeafElement {
    pub const ZERO: Self = ak_dfix_LeafElement {
        id: ak_span { off: 0, len: 0, coder: 0 },
        n: 0,
        stamp: ak_dfix_Timestamp::ZERO,
        presence: 0,
    };
}
pub const AK_DFIX_LEAFELEMENT_PRESENT_STAMP: u32 = 1 << 0;

/// Encode group for `LeafElement`.  With the unknown-field bag (decision 11 candidate).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_ufix_LeafElement {
    pub id: ak_str,
    pub n: i64,
    pub stamp: ak_ufix_Timestamp,
    pub unknown: ak_blob,
    pub presence: u32,
}
impl ak_ufix_LeafElement {
    pub const ZERO: Self = ak_ufix_LeafElement {
        id: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        n: 0,
        stamp: ak_ufix_Timestamp::ZERO,
        unknown: ak_blob { data: ::core::ptr::null(), len: 0 },
        presence: 0,
    };
}
pub const AK_UFIX_LEAFELEMENT_PRESENT_STAMP: u32 = 1 << 0;

/// Encode group for `LeafResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_LeafResponse {
    pub presence: u32,
}
impl ak_efix_LeafResponse {
    pub const ZERO: Self = ak_efix_LeafResponse {
        presence: 0,
    };
}

/// Decode group for `LeafResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_LeafResponse {
    pub presence: u32,
}
impl ak_dfix_LeafResponse {
    pub const ZERO: Self = ak_dfix_LeafResponse {
        presence: 0,
    };
}

/// Encode group for `LeafResponse`.  With the unknown-field bag (decision 11 candidate).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_ufix_LeafResponse {
    pub unknown: ak_blob,
    pub presence: u32,
}
impl ak_ufix_LeafResponse {
    pub const ZERO: Self = ak_ufix_LeafResponse {
        unknown: ak_blob { data: ::core::ptr::null(), len: 0 },
        presence: 0,
    };
}

/// Encode group for `Surrogate`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_Surrogate {
    pub text: ak_str,
    pub nested: ak_efix_SurrogateInner,
    pub raw: ak_str,
    pub presence: u32,
}
impl ak_efix_Surrogate {
    pub const ZERO: Self = ak_efix_Surrogate {
        text: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        nested: ak_efix_SurrogateInner::ZERO,
        raw: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        presence: 0,
    };
}
pub const AK_EFIX_SURROGATE_PRESENT_NESTED: u32 = 1 << 0;

/// Decode group for `Surrogate`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_Surrogate {
    pub text: ak_span,
    pub nested: ak_dfix_SurrogateInner,
    pub raw: ak_span,
    pub presence: u32,
}
impl ak_dfix_Surrogate {
    pub const ZERO: Self = ak_dfix_Surrogate {
        text: ak_span { off: 0, len: 0, coder: 0 },
        nested: ak_dfix_SurrogateInner::ZERO,
        raw: ak_span { off: 0, len: 0, coder: 0 },
        presence: 0,
    };
}
pub const AK_DFIX_SURROGATE_PRESENT_NESTED: u32 = 1 << 0;

/// Encode group for `Surrogate`.  With the unknown-field bag (decision 11 candidate).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_ufix_Surrogate {
    pub text: ak_str,
    pub nested: ak_ufix_SurrogateInner,
    pub raw: ak_str,
    pub unknown: ak_blob,
    pub presence: u32,
}
impl ak_ufix_Surrogate {
    pub const ZERO: Self = ak_ufix_Surrogate {
        text: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        nested: ak_ufix_SurrogateInner::ZERO,
        raw: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        unknown: ak_blob { data: ::core::ptr::null(), len: 0 },
        presence: 0,
    };
}
pub const AK_UFIX_SURROGATE_PRESENT_NESTED: u32 = 1 << 0;

/// Encode group for `SurrogateInner`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_SurrogateInner {
    pub text: ak_str,
    pub presence: u32,
}
impl ak_efix_SurrogateInner {
    pub const ZERO: Self = ak_efix_SurrogateInner {
        text: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        presence: 0,
    };
}

/// Decode group for `SurrogateInner`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_SurrogateInner {
    pub text: ak_span,
    pub presence: u32,
}
impl ak_dfix_SurrogateInner {
    pub const ZERO: Self = ak_dfix_SurrogateInner {
        text: ak_span { off: 0, len: 0, coder: 0 },
        presence: 0,
    };
}

/// Encode group for `SurrogateInner`.  With the unknown-field bag (decision 11 candidate).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_ufix_SurrogateInner {
    pub text: ak_str,
    pub unknown: ak_blob,
    pub presence: u32,
}
impl ak_ufix_SurrogateInner {
    pub const ZERO: Self = ak_ufix_SurrogateInner {
        text: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        unknown: ak_blob { data: ::core::ptr::null(), len: 0 },
        presence: 0,
    };
}

/// Encode group for `WireZoo`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_WireZoo {
    pub v_int32: i32,
    pub v_int64: i64,
    pub v_bool: u8,
    pub v_double: f64,
    pub v_fixed32: u32,
    pub v_string: ak_str,
    pub v_bytes: ak_str,
    pub v_enum: i32,
    pub v_msg: ak_efix_Timestamp,
    pub v_big_tag: i32,
    pub presence: u32,
}
impl ak_efix_WireZoo {
    pub const ZERO: Self = ak_efix_WireZoo {
        v_int32: 0,
        v_int64: 0,
        v_bool: 0,
        v_double: 0.0,
        v_fixed32: 0,
        v_string: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        v_bytes: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        v_enum: 0,
        v_msg: ak_efix_Timestamp::ZERO,
        v_big_tag: 0,
        presence: 0,
    };
}
pub const AK_EFIX_WIREZOO_PRESENT_V_MSG: u32 = 1 << 0;

/// Decode group for `WireZoo`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_WireZoo {
    pub v_int32: i32,
    pub v_int64: i64,
    pub v_bool: u8,
    pub v_double: f64,
    pub v_fixed32: u32,
    pub v_string: ak_span,
    pub v_bytes: ak_span,
    pub v_enum: i32,
    pub v_msg: ak_dfix_Timestamp,
    pub v_big_tag: i32,
    pub presence: u32,
}
impl ak_dfix_WireZoo {
    pub const ZERO: Self = ak_dfix_WireZoo {
        v_int32: 0,
        v_int64: 0,
        v_bool: 0,
        v_double: 0.0,
        v_fixed32: 0,
        v_string: ak_span { off: 0, len: 0, coder: 0 },
        v_bytes: ak_span { off: 0, len: 0, coder: 0 },
        v_enum: 0,
        v_msg: ak_dfix_Timestamp::ZERO,
        v_big_tag: 0,
        presence: 0,
    };
}
pub const AK_DFIX_WIREZOO_PRESENT_V_MSG: u32 = 1 << 0;

/// Encode group for `WireZoo`.  With the unknown-field bag (decision 11 candidate).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_ufix_WireZoo {
    pub v_int32: i32,
    pub v_int64: i64,
    pub v_bool: u8,
    pub v_double: f64,
    pub v_fixed32: u32,
    pub v_string: ak_str,
    pub v_bytes: ak_str,
    pub v_enum: i32,
    pub v_msg: ak_ufix_Timestamp,
    pub v_big_tag: i32,
    pub unknown: ak_blob,
    pub presence: u32,
}
impl ak_ufix_WireZoo {
    pub const ZERO: Self = ak_ufix_WireZoo {
        v_int32: 0,
        v_int64: 0,
        v_bool: 0,
        v_double: 0.0,
        v_fixed32: 0,
        v_string: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        v_bytes: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        v_enum: 0,
        v_msg: ak_ufix_Timestamp::ZERO,
        v_big_tag: 0,
        unknown: ak_blob { data: ::core::ptr::null(), len: 0 },
        presence: 0,
    };
}
pub const AK_UFIX_WIREZOO_PRESENT_V_MSG: u32 = 1 << 0;

/// Encode vtable for `Timestamp`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_Timestamp {
    /// Reserved: an empty struct has no defined size in C.
    pub _reserved: *const c_void,
}

/// Decode vtable for `Timestamp` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_Timestamp {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_Timestamp),
    >,
    /// Unknown fields of the root: `None` drops them, set captures them.
    pub unknown: Option<ak_unk_f>,
}
